# chess_stats

./: .gitignore  LICENSE  README.md  pyproject.toml
chess_stats/: __init__.py  db.py  ingest.py  query.py
notebooks/: tutorial.ipynb
